@@ -24,6 +24,7 @@ K  5090	Yahoo: Error reading emails containing "undisclosed recipients"
 K  5233	Infinite loop if Quota information is not correctly reported by server
 <no id>	add mail.imap.ignorebodystructuresize to work around server bugs
 <no id>	add "gimap" EXPERIMENTAL Gmail IMAP provider
+<no id>	add isSSL() method to all protocol providers
 
 
 		  CHANGES IN THE 1.4.5 RELEASE
